clean up to suppress compilation warnings